admin-ui: Fix associations item name overflow
Fix apyrgio/synnefo#248

--- a/snf-admin-app/synnefo_admin/admin/static/css/global.css
+++ b/snf-admin-app/synnefo_admin/admin/static/css/global.css
@@ -2457,7 +2457,7 @@ Extra-button is used to show total selected rows
 /* line 177, ../sass/_details.scss */
 .parts-separator h2 em {
   max-width: 50%;
-  display: inline-block;
+  display: inline;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
