--- a/snf-admin-app/synnefo_admin/admin/static/sass/_details.scss
+++ b/snf-admin-app/synnefo_admin/admin/static/sass/_details.scss
@@ -176,7 +176,7 @@
         padding-top: 1em;
         em {
             max-width: 50%;
-            display: inline-block;
+            display: inline;
             @include text-overflow();
             vertical-align: top;
 
